// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button presses renders item 1`] = `
<Connect(Translate(PeopleItem))
  onSelect={[MockFunction]}
  organization={
    Object {
      "expanded": false,
      "id": "personal",
      "people": Array [
        Object {
          "id": 1,
          "type": "person",
        },
        Object {
          "id": 2,
          "type": "person",
        },
        Object {
          "id": 3,
          "type": "person",
        },
      ],
      "type": "organization",
    }
  }
  person={
    Object {
      "id": 1,
      "type": "person",
    }
  }
/>
`;

exports[`renders correctly as Casey 1`] = `
<FlatList
  data={
    Array [
      Object {
        "id": 1,
        "type": "person",
      },
      Object {
        "id": 2,
        "type": "person",
      },
      Object {
        "id": 3,
        "type": "person",
      },
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  refreshControl={
    <MyRefreshControl
      colors={
        Array [
          "#ffffff",
          "#52C5DC",
        ]
      }
      onRefresh={undefined}
      progressBackgroundColor="#007398"
      refreshing={false}
      tintColor="#007398"
    />
  }
  renderItem={[Function]}
  scrollEnabled={true}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`renders correctly as Jean 1`] = `
<ScrollView
  refreshControl={
    <MyRefreshControl
      colors={
        Array [
          "#ffffff",
          "#52C5DC",
        ]
      }
      onRefresh={undefined}
      progressBackgroundColor="#007398"
      refreshing={false}
      tintColor="#007398"
    />
  }
  style={
    Object {
      "borderTopColor": "#ffffff",
      "borderTopWidth": 1,
      "flex": 1,
    }
  }
>
  <Flex
    key="personal"
  >
    <Flex
      align="center"
      direction="row"
      style={
        Object {
          "backgroundColor": "#007398",
          "height": 50,
        }
      }
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#ffffff",
            "flex": 1,
            "fontWeight": "bold",
            "paddingLeft": 20,
          }
        }
      >
        Personal Ministry
      </MyText>
      <Flex
        align="center"
        direction="row"
        justify="end"
      >
        <IconButton
          name="addContactIcon"
          onPress={[Function]}
          pressProps={
            Array [
              undefined,
            ]
          }
          size={24}
          type="MissionHub"
        />
        <IconButton
          name="upArrowIcon"
          onPress={[Function]}
          pressProps={
            Array [
              "personal",
            ]
          }
          size={10}
          type="MissionHub"
        />
      </Flex>
    </Flex>
    <FlatList
      data={
        Array [
          Object {
            "id": 1,
            "type": "person",
          },
          Object {
            "id": 2,
            "type": "person",
          },
          Object {
            "id": 3,
            "type": "person",
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      renderItem={[Function]}
      scrollEnabled={false}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </Flex>
  <Flex
    key="10"
  >
    <Flex
      align="center"
      direction="row"
      style={
        Object {
          "backgroundColor": "#007398",
          "height": 50,
        }
      }
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#ffffff",
            "flex": 1,
            "fontWeight": "bold",
            "paddingLeft": 20,
          }
        }
      >
        org 1
      </MyText>
      <Flex
        align="center"
        direction="row"
        justify="end"
      >
        <IconButton
          name="addContactIcon"
          onPress={[Function]}
          pressProps={
            Array [
              Object {
                "expanded": true,
                "id": 10,
                "name": "org 1",
                "people": Array [
                  Object {
                    "id": 11,
                    "type": "person",
                  },
                ],
                "type": "organization",
              },
            ]
          }
          size={24}
          type="MissionHub"
        />
        <IconButton
          name="upArrowIcon"
          onPress={[Function]}
          pressProps={
            Array [
              10,
            ]
          }
          size={10}
          type="MissionHub"
        />
      </Flex>
    </Flex>
    <FlatList
      data={
        Array [
          Object {
            "id": 11,
            "type": "person",
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      renderItem={[Function]}
      scrollEnabled={false}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </Flex>
  <Flex
    key="20"
  >
    <Flex
      align="center"
      direction="row"
      style={
        Object {
          "backgroundColor": "#007398",
          "height": 50,
        }
      }
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#ffffff",
            "flex": 1,
            "fontWeight": "bold",
            "paddingLeft": 20,
          }
        }
      >
        org 2
      </MyText>
      <Flex
        align="center"
        direction="row"
        justify="end"
      >
        <IconButton
          name="addContactIcon"
          onPress={[Function]}
          pressProps={
            Array [
              Object {
                "expanded": true,
                "id": 20,
                "name": "org 2",
                "people": Array [
                  Object {
                    "id": 21,
                    "type": "person",
                  },
                ],
                "type": "organization",
              },
            ]
          }
          size={24}
          type="MissionHub"
        />
        <IconButton
          name="upArrowIcon"
          onPress={[Function]}
          pressProps={
            Array [
              20,
            ]
          }
          size={10}
          type="MissionHub"
        />
      </Flex>
    </Flex>
    <FlatList
      data={
        Array [
          Object {
            "id": 21,
            "type": "person",
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      renderItem={[Function]}
      scrollEnabled={false}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </Flex>
</ScrollView>
`;
